# midigen

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  publish.yml  test.yml  tests.yml
ableton/: demo.mid
docs/: demo.mid  index.html  style.css
docs/ableton/template Project/: template.als
midigen/: generate.py  humanize.py  instrument_map.csv  instruments.py  keys.py  markov.py  midigen.als  notes.py  percussion_map.csv  rhythm.py  sequencer.py  time.py
midigen/ableton/template Project/: template.als
midiro/: keys.py  note.py  scales.py  sequencer.py  time.py
test/: example.mid  example.py  test_humanize.py  test_keys.py  test_time.py
